<resources>
    <string name="app_name">Chronos</string>
    <string name="current_date">Current Date</string>
    <string name="mon">Lun</string>
    <string name="tue">Mar</string>
    <string name="wed">Mer</string>
    <string name="thu">Jeu</string>
    <string name="fri">Ven</string>
    <string name="sat">Sam</string>
    <string name="sun">Dim</string>
    <string name="empty" />
    <string name="upcoming_events">Événements à venir</string>
    <string name="user_settings">Paramètres User</string>
    <string name="calendar">Calendrier</string>
    <string name="save_event">Enregistrer événement</string>
    <string name="event">Evènement</string>
    <string name="event_title">Titre Evènement</string>
    <string name="add_a_location">Ajout localisation</string>
    <string name="add_people">Ajout Personne</string>
    <string name="add">Ajouter</string>
    <string name="add_from_contacts">Ajout depuis Contacts</string>
    <string name="add_your_notes">Ajouter votre notes</string>
    <string name="date">Date</string>
    <string name="_06_apr_2020">06-Avr-2020</string>
    <string name="time">Temps</string>
    <string name="_12_00_am">12:00 </string>
    <string name="duration_0_hours_0_minutes">DURÉE: 0 HEURES 0 MINUTES</string>
    <string name="events">Evènements</string>
    <string name="add_event">Ajouter évenement</string>
    <string name="no_event_to_display">Aucun événement à afficher!</string>
    <string name="edit">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="note_color">Couleur évènement</string>
    <string name="send_mail">Envoyer mail</string>
    <string name="week">Semaine</string>
    <string name="next_seven_days">7 prochains jours</string>
    <string name="period">Période</string>
    <string name="today">Aujourd\'hui</string>
    <string name="next_7_days">7 prochains jours</string>
    <string name="next_30_days">30 prochains jours</string>
    <string name="all_events">Tous Evenements</string>
    <string name="notification_preference">Préférence de notificationModel</string>
    <string name="_10_minutes_before">10 minutes avant</string>
    <string name="_1_hour_before">1 heure avant</string>
    <string name="_1_day_before">1 jour avant</string>
    <string name="at_the_time_of_event">Au moment de l\'événement</string>
    <string name="back">RETOUR</string>
    <string name="share">Partager</string>
    <string name="mail">Mail</string>
    <string name="ok">OK</string>
    <string name="one_time_event">Événement ponctuel</string>
    <string name="add_notification">Ajout Notification</string>
    <string name="repetition">Répétition</string>
    <string name="one_time">Une fois</string>
    <string name="daily">Tous les jours</string>
    <string name="monthly">Mensuel</string>
    <string name="weekly">Hebdomadaire</string>
    <string name="yearly">Annuelle</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Info titre</string>
    <string name="default_info_snippet">Emplacement actuel</string>
    <string name="select_this_location">Sélectionnez cet emplacement</string>
    <string name="default_ringtone">Sonnerie</string>
    <string name="default_reminder_time">Heure de rappel</string>
    <string name="default_reminder_frequency">Fréquence de rappel</string>
    <string name="app_theme">App Theme</string>
    <string name="dark">Dark</string>
    <string name="indigo">Indigo</string>
    <string name="choose_theme">Choisir un thème</string>
    <string name="ringtone">Sonnerie</string>
    <string name="consequence">Conséquence</string>
    <string name="juntos">Juntes</string>
    <string name="piece_of_cake">Morceau de gâteau</string>
    <string name="point_blank">Point blank</string>
    <string name="slow_spring_board">Slow spring board</string>
    <string name="notificationModels">Notifications</string>
    <string name="don_t_forget_to_buy_a_gift">Don\'t forget to buy a gift</string>
    <string name="location">Location</string>
    <string name="event_details">Détails de l\'événement</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prev">Précédent</string>
    <string name="next">Suivant</string>
</resources>
